fixes #21592 - uses headless chrome instead of phantomjs
it seems that we can also cut down the default waiting time
which hopefully will speed up our tests.

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "webpack-stats-plugin": "^0.1.5"
   },
   "optionalDependencies": {
-    "phantomjs-prebuilt": "^2.1.0"
+    "chromedriver": "^2.33.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
