--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,45 @@
-language: node_js
-node_js:
-  - '6.10' # current EPEL 7
-  - '6' # previous LTS
-  - '8' # current LTS
+sudo: true
+language: ruby
+env:
+#  - DB=sqlite RAILS_TRV=514
+#  - DB=sqlite RAILS_TRV=51s
+#  - DB=sqlite RAILS_TRV=52s
+#  - DB=mysql RAILS_TRV=514
+  - DB=mysql RAILS_TRV=51s
+#  - DB=mysql RAILS_TRV=52s
+#  - DB=postgresql RAILS_TRV=514
+  - DB=postgresql RAILS_TRV=51s
+#  - DB=postgresql RAILS_TRV=52s
+addons:
+  - postgresql: "9.6"
+  - chrome: stable
+services:
+  - postgresql
+  - mysql
+rvm:
+#  - 2.4.3
+  - 2.5.0
 before_install:
-  - cp config/settings.yaml.example config/settings.yaml
-  - bundle install --without console development ec2 fog gce jsonp libvirt mysql2 openid openstack ovirt postgresql rackspace sqlite test vmware
-script: ./script/travis_run_js_tests.sh
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libvirt-dev
+  - psql -c 'CREATE DATABASE foreman;' -U postgres
+  - mysql -e 'CREATE DATABASE foreman;'
+  - cp config/settings.yaml.travis config/settings.yaml
+  - cp config/database.yml.travis config/database.yml
+  - gem update --system
+  - wget http://chromedriver.storage.googleapis.com/2.32/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - rm chromedriver_linux64.zip
+  - sudo mv -f chromedriver /usr/local/bin/
+  - sudo chmod +x /usr/local/bin/chromedriver
+  - google-chrome-stable --headless -disable-gpu --no-sandbox
+bundler_args: --jobs=4 --retry=3 --without=development
+script:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+  - npm install --unsafe-perm
+  - AS_DEPRECATION_RECORD=yes VERBOSE=false QUIET=true rake db:migrate RAILS_ENV=test
+#  - AS_DEPRECATION_RECORD=yes NOTIFICATIONS_POLLING=1000000 rake jenkins:unit
+  - 'if [ "$DB" != "sqlite" ]; then AS_DEPRECATION_RECORD=yes NOTIFICATIONS_POLLING=1000000 rake jenkins:integration; fi'
+  - cat config/as_deprecation_whitelist.yaml
