--- a/config/as_deprecation_whitelist.yaml
+++ b/config/as_deprecation_whitelist.yaml
@@ -20,6 +20,11 @@
     in the next version of Rails. The new return value will reflect the behavior of
     calling the method after `save` returned (e.g. the opposite of what it returns
     now). To maintain the current behavior, use `saved_change_to_attribute` instead.
+  callstack: app/models/concerns/strip_leading_and_trailing_dot.rb:23:in `strip_dots'
+- message: The behavior of `attribute_change` inside of after callbacks will be changing
+    in the next version of Rails. The new return value will reflect the behavior of
+    calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute` instead.
   callstack: app/models/concerns/strip_whitespace.rb:9:in `strip_spaces'
 - message: The behavior of `attribute_changed?` inside of after callbacks will be
     changing in the next version of Rails. The new return value will reflect the behavior
@@ -35,6 +40,11 @@
     changing in the next version of Rails. The new return value will reflect the behavior
     of calling the method after `save` returned (e.g. the opposite of what it returns
     now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/concerns/foreman/sti.rb:24:in `save'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
   callstack: app/models/concerns/nested_ancestry_common.rb:101:in `update_matchers'
 - message: The behavior of `attribute_changed?` inside of after callbacks will be
     changing in the next version of Rails. The new return value will reflect the behavior
@@ -46,7 +56,17 @@
     changing in the next version of Rails. The new return value will reflect the behavior
     of calling the method after `save` returned (e.g. the opposite of what it returns
     now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/concerns/nested_ancestry_common.rb:83:in `set_title'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
   callstack: app/models/concerns/nested_ancestry_common.rb:87:in `set_other_titles'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/concerns/strip_leading_and_trailing_dot.rb:23:in `strip_dots'
 - message: The behavior of `attribute_changed?` inside of after callbacks will be
     changing in the next version of Rails. The new return value will reflect the behavior
     of calling the method after `save` returned (e.g. the opposite of what it returns
@@ -62,6 +82,26 @@
     of calling the method after `save` returned (e.g. the opposite of what it returns
     now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
   callstack: app/models/nic/interface.rb:64:in `fqdn_was'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/template.rb:10:in `block in <class:Template>'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/user.rb:526:in `set_password_changed'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/user.rb:681:in `hidden_authsource_restricted'
+- message: The behavior of `attribute_changed?` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_change_to_attribute?` instead.
+  callstack: app/models/user.rb:687:in `check_permissions_for_changing_login'
 - message: The behavior of `attribute_was` inside of after callbacks will be changing
     in the next version of Rails. The new return value will reflect the behavior of
     calling the method after `save` returned (e.g. the opposite of what it returns
@@ -89,6 +129,12 @@
     of calling the method after `save` returned (e.g. the opposite of what it returns
     now). To maintain the current behavior, use `saved_changes.transform_values(&:first)`
     instead.
+  callstack: app/models/concerns/strip_leading_and_trailing_dot.rb:23:in `strip_dots'
+- message: The behavior of `changed_attributes` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_changes.transform_values(&:first)`
+    instead.
   callstack: app/models/concerns/strip_whitespace.rb:9:in `strip_spaces'
 - message: The behavior of `changed_attributes` inside of after callbacks will be
     changing in the next version of Rails. The new return value will reflect the behavior
@@ -96,6 +142,24 @@
     now). To maintain the current behavior, use `saved_changes.transform_values(&:first)`
     instead.
   callstack: app/models/nic/interface.rb:65:in `fqdn_was'
+- message: The behavior of `changed_attributes` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_changes.transform_values(&:first)`
+    instead.
+  callstack: app/models/taxonomy.rb:32:in `block in <class:Taxonomy>'
+- message: The behavior of `changed_attributes` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_changes.transform_values(&:first)`
+    instead.
+  callstack: test/integration/org_admin_integration_test.rb:212:in `setup'
+- message: The behavior of `changed_attributes` inside of after callbacks will be
+    changing in the next version of Rails. The new return value will reflect the behavior
+    of calling the method after `save` returned (e.g. the opposite of what it returns
+    now). To maintain the current behavior, use `saved_changes.transform_values(&:first)`
+    instead.
+  callstack: test/integration/org_admin_integration_test.rb:290:in `setup'
 - message: The behavior of `changed` inside of after callbacks will be changing in
     the next version of Rails. The new return value will reflect the behavior of calling
     the method after `save` returned (e.g. the opposite of what it returns now). To
@@ -105,7 +169,22 @@
     the next version of Rails. The new return value will reflect the behavior of calling
     the method after `save` returned (e.g. the opposite of what it returns now). To
     maintain the current behavior, use `saved_changes.keys` instead.
+  callstack: app/models/concerns/strip_leading_and_trailing_dot.rb:23:in `strip_dots'
+- message: The behavior of `changed` inside of after callbacks will be changing in
+    the next version of Rails. The new return value will reflect the behavior of calling
+    the method after `save` returned (e.g. the opposite of what it returns now). To
+    maintain the current behavior, use `saved_changes.keys` instead.
   callstack: app/models/concerns/strip_whitespace.rb:9:in `strip_spaces'
+- message: The behavior of `changed` inside of after callbacks will be changing in
+    the next version of Rails. The new return value will reflect the behavior of calling
+    the method after `save` returned (e.g. the opposite of what it returns now). To
+    maintain the current behavior, use `saved_changes.keys` instead.
+  callstack: app/models/taxonomy.rb:32:in `block in <class:Taxonomy>'
+- message: The behavior of `changes` inside of after callbacks will be changing in
+    the next version of Rails. The new return value will reflect the behavior of calling
+    the method after `save` returned (e.g. the opposite of what it returns now). To
+    maintain the current behavior, use `saved_changes` instead.
+  callstack: app/models/concerns/strip_leading_and_trailing_dot.rb:23:in `strip_dots'
 - message: The behavior of `changes` inside of after callbacks will be changing in
     the next version of Rails. The new return value will reflect the behavior of calling
     the method after `save` returned (e.g. the opposite of what it returns now). To
