--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,5 @@ script:
   - nvm use stable
   - npm install --unsafe-perm
   - AS_DEPRECATION_RECORD=yes VERBOSE=false QUIET=true rake db:migrate RAILS_ENV=test
-  - AS_DEPRECATION_RECORD=yes NOTIFICATIONS_POLLING=1000000 rake jenkins:unit
+#  - AS_DEPRECATION_RECORD=yes NOTIFICATIONS_POLLING=1000000 rake jenkins:unit
   - 'if [ "$DB" != "sqlite" ]; then AS_DEPRECATION_RECORD=yes NOTIFICATIONS_POLLING=1000000 rake jenkins:integration; fi'
