--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,37 @@
-language: node_js
-node_js:
-  - '10'
-  - '12'
+sudo: true
+dist: xenial
+language: ruby
 cache:
-  npm: false  
-script: ./script/travis_run_js_tests.sh
+  bundler: true
+  directories:
+    - $HOME/.npm
+addons:
+  postgresql: '11.5'
+  chrome: stable
+services:
+  - postgresql
+rvm:
+  - 2.5.7
+  - 2.7.1
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libsystemd-dev libvirt-dev
+  - sudo apt-get --yes remove postgresql\*
+  - sudo apt-get install -y postgresql-11 postgresql-client-11
+  - sudo cp /etc/postgresql/{9.6,11}/main/pg_hba.conf
+  - sudo service postgresql restart 11
+before_script:
+  - psql --version
+  - psql -c 'CREATE DATABASE foreman;' -U postgres
+  - psql -c 'CREATE ROLE travis SUPERUSER LOGIN CREATEDB;' -U postgres
+  - cp config/settings.yaml.travis config/settings.yaml
+  - cp config/database.yml.travis config/database.yml
+bundler_args: --jobs=4 --retry=3 --without=development
+script:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+  - npm install --unsafe-perm --no-audit
+  - AS_DEPRECATION_RECORD=yes bundle exec rake db:migrate VERBOSE=false RAILS_ENV=test
+  - AS_DEPRECATION_RECORD=yes NOTIFICATIONS_POLLING=1000000 bundle exec rake jenkins:unit jenkins:integration
+  - cat config/as_deprecation_whitelist.yaml
