--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "jed": "^1.1.1",
     "react-intl": "^2.8.0"
   },
+  "optionalDependencies": {
+    "chromedriver": "83.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.0",
     "@babel/preset-env": "7.9.5",
